--- a/entities/scripts/scripts_control_shelly_covers.yaml
+++ b/entities/scripts/scripts_control_shelly_covers.yaml
@@ -206,6 +206,18 @@ close_kitchen_cover_30:
         position: '30'
       service: cover.set_cover_position
 
+close_kitchen_cover_50:
+  alias: 'close kitchen cover to 50%'
+  sequence:
+    - condition: numeric_state
+      entity_id: cover.shelly_shsw_25_f40933_2
+      above: 50
+      value_template: '{{ state.attributes.current_position }}'
+    - data:
+        entity_id: cover.shelly_shsw_25_f40933_2
+        position: '50'
+      service: cover.set_cover_position
+
 open_kitchen_cover_100:
   alias: 'open kitchen cover to 100%'
   sequence:
