add support for HEOS favorites change and denon buttons

--- a/lovelace/views/view_denon_control.yaml
+++ b/lovelace/views/view_denon_control.yaml
@@ -4,16 +4,13 @@ panel: true
 cards:
   - type: vertical-stack
     cards:
-      - type: entity
-        entity: media_player.denon_2
+      - type: media-control
+        entity: media_player.denon
       - type: entity
         entity: media_player.denon
-        attribute: Source
-        icon: 'mdi:radio'
-        name: Tune-in
       - entities:
         - input_select.denon_tune_in_select
-        - script.denon_tune_in_select
+        - script.select_tunein
         show_header_toggle: false
         title: Denon Tune in
         type: entities
