--- a/entities/scripts/scripts_denon.yaml
+++ b/entities/scripts/scripts_denon.yaml
@@ -48,6 +48,12 @@ denon_glz:
 ##############################################################
 #                    denon buttons                           #
 ##############################################################
+denon_power_off:
+  alias: "power off denon"
+  sequence:
+    - service: media_player.turn_off
+      data_template:
+        entity_id: media_player.denon_2
 
 denon_toggle_power:
   alias: "toggle power denon"
