--- a/entities/scripts/scripts_control_shelly_covers.yaml
+++ b/entities/scripts/scripts_control_shelly_covers.yaml
@@ -7,7 +7,7 @@ open_all_covers:
   sequence:
     - service: script.open_work_room_cover_100
     - service: script.open_parents_room_big_cover_100
-    - service: script.open_parents_room_small_cover_100
+    # - service: script.open_parents_room_small_cover_100
     - service: script.open_kids_room_cover_100
     - service: script.open_living_room_cover_100
     - service: script.open_kitchen_cover_100
@@ -23,7 +23,7 @@ close_all_covers:
     - service: script.close_parents_room_big_cover_30
     - service: script.close_parents_room_small_cover_30
     - service: script.close_kids_room_cover_30
-    - service: script.close_living_room_cover_50
+    # - service: script.close_living_room_cover_50
     - service: script.close_kitchen_cover_30
 
 ##############################################################
@@ -110,29 +110,29 @@ open_parents_room_big_cover_100:
 #             parents room small cover                       # 
 ##############################################################
 
-close_parents_room_small_cover_30:
-  alias: 'close parents room small cover to 30%'
-  sequence:
-    - condition: numeric_state
-      entity_id: cover.shelly_shsw_25_98f4abf2c6d3_2
-      above: 30
-      value_template: '{{ state.attributes.current_position }}'
-    - data:
-        entity_id: cover.shelly_shsw_25_98f4abf2c6d3_2
-        position: '30'
-      service: cover.set_cover_position
+# close_parents_room_small_cover_30:
+#   alias: 'close parents room small cover to 30%'
+#   sequence:
+#     - condition: numeric_state
+#       entity_id: cover.shelly_shsw_25_98f4abf2c6d3_2
+#       above: 30
+#       value_template: '{{ state.attributes.current_position }}'
+#     - data:
+#         entity_id: cover.shelly_shsw_25_98f4abf2c6d3_2
+#         position: '30'
+#       service: cover.set_cover_position
 
-open_parents_room_small_cover_100:
-  alias: 'open parents room small cover to 100%'
-  sequence:
-    - condition: numeric_state
-      entity_id: cover.shelly_shsw_25_98f4abf2c6d3_2
-      below: 100
-      value_template: '{{ state.attributes.current_position }}'
-    - data:
-        entity_id: cover.shelly_shsw_25_98f4abf2c6d3_2
-        position: '100'
-      service: cover.set_cover_position
+# open_parents_room_small_cover_100:
+#   alias: 'open parents room small cover to 100%'
+#   sequence:
+#     - condition: numeric_state
+#       entity_id: cover.shelly_shsw_25_98f4abf2c6d3_2
+#       below: 100
+#       value_template: '{{ state.attributes.current_position }}'
+#     - data:
+#         entity_id: cover.shelly_shsw_25_98f4abf2c6d3_2
+#         position: '100'
+#       service: cover.set_cover_position
 
 ##############################################################
 #             kids room cover                                # 
