--- a/lovelace/views/view_denon_control.yaml
+++ b/lovelace/views/view_denon_control.yaml
@@ -1,5 +1,6 @@
 title: Denon Control
 path: denon_control
+panel: true
 cards: 
   - type: vertical-stack
     cards:
@@ -8,6 +9,7 @@ cards:
       color_type: label-card
       color: rgb(88, 142, 189)
       name: Denon Control
+      show_name: true
     # 2nd line
     - type: horizontal-stack
       cards:
@@ -17,6 +19,9 @@ cards:
           color_type: label-card
           color: rgb(66, 134, 244)
           name: Power
+          styles:
+            card:
+              - height: 65px
           icon: mdi:power
           state:
             - value: "off"
@@ -30,6 +35,9 @@ cards:
           color_type: label-card
           color: rgb(66, 134, 244)
           name: Mute
+          styles:
+            card:
+              - height: 65px
           show_name: true
           icon: mdi:volume-off
           tap_action:
@@ -41,6 +49,9 @@ cards:
           color: rgb(66, 134, 244)
           name: Volume Down
           show_name: true
+          styles:
+            card:
+              - height: 65px
           icon: mdi:volume-minus
           tap_action:
             action: call-service
@@ -49,6 +60,9 @@ cards:
           color_type: label-card
           color: rgb(66, 134, 244)
           name: Volume Up
+          styles:
+            card:
+              - height: 65px
           show_name: true
           icon: mdi:volume-plus
           tap_action:
@@ -63,6 +77,9 @@ cards:
           color: rgb(66, 134, 244)
           name: TV-Audio
           show_name: true
+          styles:
+            card:
+              - height: 65px
           icon: mdi:television
           tap_action:
             action: call-service
@@ -72,6 +89,9 @@ cards:
           color_type: label-card
           color: rgb(66, 134, 244)
           name: HEOS
+          styles:
+            card:
+              - height: 65px
           show_name: true
           icon: mdi:music
           tap_action:
@@ -86,6 +106,9 @@ cards:
           color: rgb(66, 134, 244)
           name: 'גלגל"צ'
           show_name: true
+          styles:
+            card:
+              - height: 65px
           tap_action:
             action: call-service
             service: script.denon_glgltz
@@ -94,6 +117,9 @@ cards:
           color_type: label-card
           color: rgb(66, 134, 244)
           name: ECO99
+          styles:
+            card:
+              - height: 65px
           show_name: true
           tap_action:
             action: call-service
@@ -103,6 +129,9 @@ cards:
           color_type: label-card
           color: rgb(66, 134, 244)
           name: 'גלי צה"ל'
+          styles:
+            card:
+              - height: 65px
           show_name: true
           tap_action:
             action: call-service
@@ -115,6 +144,9 @@ cards:
           color: rgb(66, 134, 244)
           name: AUTO
           show_name: true
+          styles:
+            card:
+              - height: 65px
           tap_action:
             action: call-service
             service: script.denon_auto_sound_mode
@@ -122,12 +154,18 @@ cards:
           color_type: label-card
           color: rgb(66, 134, 244)
           name: DTS
+          styles:
+            card:
+              - height: 65px
           show_name: true
           tap_action:
             action: call-service
             service: script.denon_dts_sound_mode    
         - type: "custom:button-card"
           color_type: label-card
+          styles:
+            card:
+              - height: 65px
           color: rgb(66, 134, 244)
           name: Dolby Digital
           show_name: true
@@ -137,6 +175,9 @@ cards:
         - type: "custom:button-card"
           color_type: label-card
           color: rgb(66, 134, 244)
+          styles:
+            card:
+              - height: 65px
           name: Stereo
           show_name: true
           tap_action:
@@ -145,6 +186,9 @@ cards:
         - type: "custom:button-card"
           color_type: label-card
           color: rgb(66, 134, 244)
+          styles:
+            card:
+              - height: 65px
           name: MCH Stereo
           show_name: true
           tap_action:
@@ -153,12 +197,16 @@ cards:
       # 6th line
     - type: media-control
       entity: media_player.denon
-    # 7th line
+    # last line
     - type: "custom:button-card"
       color_type: label-card
       icon: mdi:home
       color: rgb(88, 142, 189)
       name: Home
+      size: 100%
+      styles:
+        card:
+          - height: 100px
       tap_action:
         action: navigate
         navigation_path: /lovelace/floor_plan
